--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
   ],
   "dependencies": {
     "aws-sdk": "^2.1176.0",
+    "bootstrap": "^5.1.3",
+    "react-bootstrap": "^2.4.0",
+    "react-icons": "^4.4.0",
+    "react-router-dom": "^6.3.0",
     "uuid": "^8.3.2"
   }
 }
