--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,8 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.1.3",
+    "aws-amplify": "^4.3.28",
+    "bootstrap": "^5.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
@@ -20,7 +21,7 @@
   },
   "scripts": {
     "start": "sst-env -- react-scripts start",
-    "build": "sst-env -- react-scripts build",
+    "build": " react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
