--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-bootstrap": "^2.4.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
+    "serve": "^14.0.1",
     "uuid": "^8.3.2"
   }
 }
