Done With google and Facebook

--- a/.env
+++ b/.env
@@ -2,3 +2,11 @@
 # To apply them to your Lambda functions, checkout this doc - https://docs.serverless-stack.com/environment-variables#environment-variables-in-lambda-functions
 
 MY_ENV_VAR=i-am-an-environment-variable
+
+GOOGLE_CLIENT_ID = 167775773265-ctbjhgj5i73aru1jab7vttmtd7fdq0au.apps.googleusercontent.com
+
+GOOGLE_CLIENT_SECRET = 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
+
+FACEBOOK_APP_ID = 473724800777348
+
+FACEBOOK_APP_SECRET = ae992b17edf26732159676967aecaa24
