--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "aws-amplify": "^4.3.30",
     "bootstrap": "^5.2.0",
+    "eslint": "^8.21.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
